<resources>
    <string name="app_name">Invisible Friend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered_yet">Not registered yet</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_here">Login here</string>

    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="authentication_successfully">User register successfully.</string>
    <string name="authentication_failed">Authentication failed: %s.</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="insert_password">Insert password</string>
    <string name="user_not_identifier">There is no user record corresponding to this identifier. Please, registered.</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login_facebook">LoginActivityFacebook</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Facebook details -->
    <string name="facebook_app_id">921825941841338</string>
    <string name="fb_login_protocol_scheme">fb921825941841338</string>
    <string name="facebook_client_token">a9a289be399180fc7b7001dba89cfa1a</string>
    <string name="user_used_facebook">User already logged with facebook, use facebook Login instead</string>
    <string name="user_without_phoneNumber">You don\'t your phone Number information. Register it if you want to receive Invisible Friend\'s result via sms</string>
    <string name="register_number">Register Number</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="no_username">Welcome! What would you like to be called?</string>
    <string name="create_group">Create Group</string>
    <string name="user_groups">Your Groups</string>
    <string name="details_group">Group Details</string>
    <string name="creator_name">Creator name: %s</string>
    <string name="raffle">Raffle</string>
    <string name="update_profile">Update profile</string>
    <string name="user_name">Username</string>
    <string name="profile">Profile</string>
    <string name="welcome_if">Welcome to Invisible Friend App</string>
    <string name="Click_here">Click to create a group!</string>
    <string name="have_missing_data">You have some missing data needed for this app to work properly! Please insert them and submit!</string>
    <string name="have_no_missing_data">Your userdata is filled up properly, you can updated it in the fields below</string>
    <string name="map">Map</string>
    <string name="groups">Groups</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyATqaHUxwX-allfsrLT7dllwtp90g9s_Y0</string>
</resources>