<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_36dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>