<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.invisiblefriend.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.invisiblefriend.ui.home.HomeFragment"
        android:label="@string/groups"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.invisiblefriend.ui.gallery.GalleryFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.invisiblefriend.ui.slideshow.SlideshowFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_slideshow" />

    <activity
        android:id="@+id/nav_logOut"
        android:name="com.example.invisiblefriend.ui.login.LoginActivity"
        android:label="Logout"
        android:layout="@layout/activity_login"/>

</navigation>