<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile.UserProfileActivity"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <fragment
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation"
        android:visibility="gone"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/Theme.Invisiblefriend.PopupOverlay"
        app:title="@string/profile"
        app:navigationIcon="@drawable/ic_back_button"
        app:titleMarginStart="@dimen/material_baseline_grid_10x"
        android:foregroundGravity="center"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="@dimen/material_baseline_grid_4.5x"
        app:layout_constraintTop_toTopOf="@+id/tb_profile">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/material_baseline_grid_2x"
            android:text="lorem ipsum"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_baseline_grid_3x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_baseline_grid_3x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btCreateGroup"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:paddingLeft="@dimen/material_baseline_grid_3x"
            android:paddingRight="@dimen/material_baseline_grid_3x"
            android:layout_marginTop="@dimen/material_baseline_grid_3x"
            android:text="@string/update_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rvListUsersGroup" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>