<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailsGroup.DetailsGroupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/user_groups_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_back_button"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/llDetailsGroup"
        app:popupTheme="@style/Theme.Invisiblefriend.PopupOverlay"
        app:title="@string/details_group" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llDetailsGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="@dimen/material_baseline_grid_4.5x"
        app:layout_constraintTop_toTopOf="@+id/user_groups_toolbar">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreatorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListUsersGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/material_baseline_grid_2x"
                app:layout_constraintBottom_toBottomOf="@+id/btCreateGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvGroupName" />
        <Button
            android:id="@+id/btShuffle"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/material_baseline_grid_1.5x"
            android:background="@color/white"
            android:paddingLeft="@dimen/material_baseline_grid_3x"
            android:paddingRight="@dimen/material_baseline_grid_3x"
            android:text="@string/raffle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rvListUsersGroup" />

        <TextView
            android:id="@+id/tvYourFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="TextView" />



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>